part1/exercise-1.11/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-service
spec:
  type: ClusterIP
  selector:
    app: logs
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8082
