part1/exercise-1.11/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-svc
spec:
  type: ClusterIP
  selector:
    app: logs
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
